added day buttons list

--- a/index.html
+++ b/index.html
@@ -21,32 +21,21 @@
 </head>
 
 <body>
+		
 			<div data-role="header">
+				<a href="#" class="ui-btn ui-btn-left ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Menu</a>
 				<h1>Style Weather</h1>
 		    </div>
-
+		
 			<div data-role="content">
 				<h2><center>Know what to wear, and when!</center></h2>
-		
-			<div data-role="header" >
-				<center><h3>Today</h3></center>
-    		<div data-role="main" >
-      			<a href="today.html" ></a>
-    					
 			</div>
-				
-				<div data-role="header">
-				<ul data-role="listview">
-				<li data-role="list-divider">Tomorrow</li>
-				<li><a href="tomorrow.html"></a></li>
-
-
-				<div data-role="header">
-					<h5>Day After</h5>
-		
-			</div>
-		</div>
-
+			<div data-role="controlgroup" data-type="vertical">
+      			<p>Choose your day:</p>
+      			<a href="today.html" class="ui-btn">Today</a>
+     			 <a href="tomorrow.html" class="ui-btn">Tomorrow 2</a>
+     			 <a href="dayAfterTomorrow.html" class="ui-btn">Day After Tomorrow</a>
+   			 </div>
 		
 
 			<div data-role="footer">
