--- a/Today/today.html
+++ b/Today/today.html
@@ -4,9 +4,9 @@
 	<title> Today </title>
 	<meta charset="UTF-8">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script type="text/javascript" src="Today/js/modernizr.js"></script>
-	<script type="text/javascript" src="Today/js/app.js"></script>
-	<link rel="stylesheet" type="text/css" href="Today/style.css"/>
+	<script type="text/javascript" src="js/modernizr.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
+	<link rel="stylesheet" type="text/css" href="Today/css/style.css"/>
 </head>
 
 <body>
