linked today folder

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div data-role="footer">
   					<div data-role="navbar">
    				 <ul>
-     				 <li><a href="today.html" class="ui-btn-active" data-icon="home">Home</a></li>
+     				 <li><a href="Today/today.html" class="ui-btn-active" data-icon="home">Home</a></li>
      				 <li><a href="tomorrow.html" class="ui-btn-active" data-icon="search">Search</a></li>
     				  <li><a href="dayAfterTomorrow.html" class="ui-btn-active" data-icon="search">More Days</a></li>
     			</ul>
