--- a/index.html
+++ b/index.html
@@ -5,34 +5,48 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
-	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="stylesheet" type="text/css" href="Today/css/style.css"/>
 
 	<link rel="stylesheet" href="css/themes/StyleWeather.css" />
 	<link rel="stylesheet" href="css/themes/StyleWeather.min.css" />
-	<link rel="stylesheet" href="css/themes/jquery.mobile.icon.min.css" />
+	<link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" />
 	
 
-	<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script type="text/javascript" src="js/modernizr.js"></script>-->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="Today/js/modernizr.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="Today/js/app.js"></script>
 	
 </head>
 
 <body>
-		
+			<div data-role="panel" id="mypanel">
+				<div>hello world</div>
+		    </div>
+
 			<div data-role="header">
-				<a href="#" class="ui-btn ui-btn-left ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Menu</a>
+				<a href="#mypanel" class="ui-btn ui-btn-left ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Menu</a>
 				<h1>Style Weather</h1>
 		    </div>
 		
 			<div data-role="content">
 				<h2><center>Know what to wear, and when!</center></h2>
 			</div>
+			
+			<div id="container">
+				<ul>
+					<li><img src="placeholder1.jpg" width="300" height="200" /></li>
+					<li><img src="placeholder2.jpg" width="300" height="200" /></li>
+					<li><img src="placeholder3.jpg" width="300" height="200" /></li>
+				</ul>
+				<span class="button prevButton"></span>
+				<span class="button nextButton"></span>
+			</div>	
+
 			<div data-role="controlgroup" data-type="vertical">
       			<p>Choose your day:</p>
-      			<a href="today.html" class="ui-btn">Today</a>
+      			<a href="Today/today.html" class="ui-btn">Today</a>
      			 <a href="tomorrow.html" class="ui-btn">Tomorrow 2</a>
      			 <a href="dayAfterTomorrow.html" class="ui-btn">Day After Tomorrow</a>
    			 </div>
