--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
-	<link rel="stylesheet" type="text/css" href="Today/css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 
 	<link rel="stylesheet" href="css/themes/StyleWeather.css" />
 	<link rel="stylesheet" href="css/themes/StyleWeather.min.css" />
@@ -13,10 +13,10 @@
 	
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script type="text/javascript" src="Today/js/modernizr.js"></script>
+	<script type="text/javascript" src="js/modernizr.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-	<script type="text/javascript" src="Today/js/app.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 	<!--<link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">Shortcut Icon Link. Need to create PNG-->
 </head>
 
@@ -90,9 +90,9 @@
 					<ul>
 						<li><a href="#" class="ui-btn">Option A</a></li>
 						<li><a href="#" class="ui-btn">Option B</a></li>
-						<li><a href="#" class="ui-btn">Option C</a></li>
-						<li><a href="#" class="ui-btn">Option D</a></li>
-						<li><a href="#" class="ui-btn">Option E</a></li>
+						<li><a href="#" class="ui-btn ui-icon-shop ui-btn-icon-left">Shop</a></li>
+						<li><a href="#" class="ui-btn ui-icon-share ui-btn-icon-left">Share</a></li>
+						<li><a href="#" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a></li>
 					<ul>
 				</div>
 		    </div>
@@ -105,16 +105,14 @@
 			<div data-role="content">
 				<h2><center>Today</center></h2>
 
-			<div id= "icon">
+			<id= "icon">
 				<p id="wrapper"></p>
-				<center><img id="loader" src="Today/images/loader.gif"/></center>  
-
+				<center><img id="loader" src="images/loader.gif"/></center>  
 				<p id="temp"></p>
        			 <p id="sum"></p>
 		
 			</div>
-			
-			</div>	
+				
 
 			<div data-role="footer" data-position="fixed">
   					<div data-role="navbar">
@@ -134,9 +132,9 @@
 					<ul>
 						<li><a href="#" class="ui-btn">Option A</a></li>
 						<li><a href="#" class="ui-btn">Option B</a></li>
-						<li><a href="#" class="ui-btn">Option C</a></li>
-						<li><a href="#" class="ui-btn">Option D</a></li>
-						<li><a href="#" class="ui-btn">Option E</a></li>
+						<li><a href="#" class="ui-btn ui-icon-shop ui-btn-icon-left">Shop</a></li>
+						<li><a href="#" class="ui-btn ui-icon-share ui-btn-icon-left">Share</a></li>
+						<li><a href="#" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a></li>
 					<ul>
 				</div>
 		    </div>
@@ -151,7 +149,7 @@
 			
 				<div id= "icon">
 					<p id="wrapper"></p>
-					<center><img id="loader" src="Today/images/loader.gif"/></center>  
+					<center><img id="loader" src="images/loader.gif"/></center>  
 
 					<p id="temp2"></p>
        				 <p id="sum2"></p>
@@ -179,9 +177,9 @@
 					<ul>
 						<li><a href="#" class="ui-btn">Option A</a></li>
 						<li><a href="#" class="ui-btn">Option B</a></li>
-						<li><a href="#" class="ui-btn">Option C</a></li>
-						<li><a href="#" class="ui-btn">Option D</a></li>
-						<li><a href="#" class="ui-btn">Option E</a></li>
+						<li><a href="#" class="ui-btn ui-icon-shop ui-btn-icon-left">Shop</a></li>
+						<li><a href="#" class="ui-btn ui-icon-share ui-btn-icon-left">Share</a></li>
+						<li><a href="#" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a></li>
 					<ul>
 				</div>
 		    </div>
@@ -198,7 +196,7 @@
 			
 			<div id= "icon">
 				<p id="wrapper"></p>
-				<center><img id="loader" src="Today/images/loader.gif"/></center>
+				<center><img id="loader" src="images/loader.gif"/></center>
 
 				<p id="temp3"></p>
        			 <p id="sum3"></p>
