giving up for tonight.
Got weather to show but all three on one page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			</div>
 	</div>
 
-<div data-role="page" id="Today"><!--page1-->
+	<div data-role="page" id="Today" data-position="fixed"><!--page1-->
 			<div data-role="panel" id="mypanel">
 				<div>
 					<ul>
@@ -124,7 +124,7 @@
     					</ul>
  				 	</div>
 			</div>
-	</div>
+	</div>-->
 
 <div data-role="page"  id="Tomorrow"> <!--page2-->
 			<div data-role="panel" id="mypanel">
@@ -148,7 +148,7 @@
 				<h2><center>Tomorrow</center></h2>
 			
 				<div id= "icon">
-					<p id="wrapper"></p>
+					<p id="wrapper2"></p>
 					<center><img id="loader" src="images/loader.gif"/></center>  
 
 					<p id="temp2"></p>
@@ -195,7 +195,7 @@
 			
 			
 			<div id= "icon">
-				<p id="wrapper"></p>
+				<p id="wrapper3"></p>
 				<center><img id="loader" src="images/loader.gif"/></center>
 
 				<p id="temp3"></p>
