--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 			
 				<div id= "icon">
 					<p id="wrapper2"></p>
-					<center><img id="loader" src="images/loader.gif"/></center>  
+					<!--<center><img id="loader" src="images/loader.gif"/></center>-->
 
 					<p id="temp2"></p>
        				 <p id="sum2"></p>
@@ -196,7 +196,7 @@
 			
 			<div id= "icon">
 				<p id="wrapper3"></p>
-				<center><img id="loader" src="images/loader.gif"/></center>
+				<!--<center><img id="loader" src="images/loader.gif"/></center>-->
 
 				<p id="temp3"></p>
        			 <p id="sum3"></p>
