starting to messing with landscape

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 		
 			<div data-role="content">
 				<h2><center>Today</center></h2>
+				<center><p>Flip your phone for your hourly temperature.</p></center>
 
 			<id= "icon">
 				<p id="wrapper"></p>
@@ -146,7 +147,8 @@
 		
 			<div data-role="content">
 				<h2><center>Tomorrow</center></h2>
-			
+				<center><p>Flip your phone for your hourly temperature.</p></center>
+
 				<div id= "icon">
 					<p id="wrapper2"></p>
 					<!--<center><img id="loader" src="images/loader.gif"/></center>-->
@@ -191,7 +193,7 @@
 		
 			<div data-role="content">
 				<h2><center>Day After Tomorrow</center></h2>
-			
+				<center><p>Flip your phone for your hourly temperature.</p></center>
 			
 			
 			<div id= "icon">
@@ -216,6 +218,20 @@
 			</div>
 	</div>
 
-
+	<div id="landscape" class="hidden">
+		<h1> Simple Weather </h1>
+			<div id="owl-example" class="owl-carousel" id="slide">	
+				<div id="day1" class="week1">
+					<p class="title">Today</p>
+					<p id="d1" class="degrees"></p>
+					<div id="icon1"></div>
+					<p id="s1"></p>
+					
+				</div>
+				
+		</div><!-- END OF OWL -->
+	</div><!--End of #landscape-->
+	
+<script src="owl/owl-carousel/owl.carousel.js"></script>
 </body>
 </html>
