--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 			<div data-role="content">
 				<h2><center>Know what to wear, and when!</center></h2>
 			
-			<div id="cp_widget_ee59844e-0e73-4bdd-a304-f38b369564d0">...</div><script type="text/javascript">
-				var cpo = []; cpo["_object"] ="cp_widget_ee59844e-0e73-4bdd-a304-f38b369564d0"; cpo["_fid"] = "AcKAQLsmM619";
+			<div id="cp_widget_11fef60a-bb96-4f69-976a-52c05496abc8">...</div><script type="text/javascript">
+				var cpo = []; cpo["_object"] ="cp_widget_11fef60a-bb96-4f69-976a-52c05496abc8"; cpo["_fid"] = "AcKAQLsmM619";
 				var _cpmp = _cpmp || []; _cpmp.push(cpo);
 				(function() { var cp = document.createElement("script"); cp.type = "text/javascript";
 				cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
 				var c = document.getElementsByTagName("script")[0];
-				c.parentNode.insertBefore(cp, c); })(); </script><noscript>Powered by Cincopa <a href='http://www.cincopa.com/video-hosting'>Video Hosting for Business</a> solution.<span>Slideshow</span><span>Homepage</span><span>Placeholder </span><span>cvuavur vuvbwev ivcbdsvi </span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 1080</span><span>height</span><span> 720</span><span>Placeholder</span><span>v lwrknfvwoirbvwio kbrvoiwb  vubwvwior vwrbn</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 1080</span><span>height</span><span> 720</span><span>Placeholder</span><span>fvklebnkln jvbriovb ierobvneoi ivebonklf iovbion </span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 1080</span><span>height</span><span> 720</span></noscript>
+				c.parentNode.insertBefore(cp, c); })(); </script><noscript>Powered by Cincopa <a href='http://www.cincopa.com/video-hosting'>Video Hosting for Business</a> solution.<span>Slideshow</span><span>Homepage</span><span>Style Weather</span><span>Have a hard time knowing what to wear? Do you sometimes under/over dress? Then you prayers have been answered!</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 225</span><span>height</span><span> 225</span><span>BURGUNDY!</span><span>Burgundy is December's color. Hot color that's great for the holidays and easily matched with a hot red or dark lipstick.</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 2238</span><span>height</span><span> 1675</span><span>New Upcoming Graphic Designer</span><span>Who is this mysterious graphic designer everyone is raving about? </span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 1200</span><span>height</span><span> 750</span><span>HAPPY HOLIDAYS!</span><span>Hope you all have a Merry Christmas and a Happy New Year!</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 2100</span><span>height</span><span> 1650</span></noscript>
 		
 
 			<!--<div id="content">
@@ -184,7 +184,7 @@
 				<h1> Style Weather </h1>
 			</div>
 
-	</div>
+</div>
 
 <div data-role="page"  id="dayAfterTomorrow"><!--page3-->
 			<div data-role="panel" id="mypanel">
@@ -229,29 +229,8 @@
     					</ul>
  				 	</div>
 			</div>
+</div>			
 			
-			<div id="landscape" class="hidden">
-				<h1> Style Weather </h1>
-			</div>
-</div>
-
-		
-				<!--<div id="Today" class="week1">
-					<p class="title">Today</p>
-					<p id="d1" class="degrees"></p>
-					<div id="icon1"></div>
-					<p id="s1"></p>
-					
-					</div>-->
-			<div id="hourly">
-			<h1>hourly weather</h1>
-			
-
-
-
-
-			</div><!-- END OF OWL -->						
-	</div>End of #landscape
 		
 	
 <script src="owl/owl-carousel/owl.carousel.js"></script>
