--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<!--<link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">Shortcut Icon Link. Need to create PNG
-	Owl Carousel-->
+	Owl Carousel
 	<link rel="stylesheet" href="owl/owl-carousel/owl.carousel.css">
 	<link rel="stylesheet" href="owl/owl-carousel/owl.theme.css">
-	<script src="owl/assets/js/jquery-1.9.1.min.js"></script>
+	<script src="owl/assets/js/jquery-1.9.1.min.js"></script>-->
 	
 </head>
 
 <body>
-	<div id="portrait">
+<div id="portrait">
 	<div data-role="page" id="home">
 			<div data-role="panel" id="mypanel" >
 				
@@ -35,8 +35,8 @@
 						<li><a href="#" class="ui-btn">Option A</a></li>
 						<li><a href="#" class="ui-btn">Option B</a></li>
 						<li><a href="#" class="ui-btn ui-icon-shop ui-btn-icon-left">Shop</a></li>
-						<li><a href="#" class="ui-btn ui-icon-share ui-btn-icon-left">Share</a></li>
-						<li><a href="#" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a></li>
+						<li><a href="#shop" class="ui-btn ui-icon-share ui-btn-icon-left">Share</a></li>
+						<li><a href="#info" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a></li>
 					<ul>
 				</div>
 		    </div>
@@ -46,38 +46,17 @@
 				<h1>Style Weather</h1>
 		    </div>
 		
-			<div data-role="content">
+		<div data-role="content">
 				<h2><center>Know what to wear, and when!</center></h2>
 			
-			<div id="cp_widget_11fef60a-bb96-4f69-976a-52c05496abc8">...</div><script type="text/javascript">
-				var cpo = []; cpo["_object"] ="cp_widget_11fef60a-bb96-4f69-976a-52c05496abc8"; cpo["_fid"] = "AcKAQLsmM619";
+			<div id="cp_widget_f997b0a4-508a-4205-a8b5-4d1829712088">...</div><script type="text/javascript">
+				var cpo = []; cpo["_object"] ="cp_widget_f997b0a4-508a-4205-a8b5-4d1829712088"; cpo["_fid"] = "AcKAQLsmM619";
 				var _cpmp = _cpmp || []; _cpmp.push(cpo);
 				(function() { var cp = document.createElement("script"); cp.type = "text/javascript";
 				cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
 				var c = document.getElementsByTagName("script")[0];
-				c.parentNode.insertBefore(cp, c); })(); </script><noscript>Powered by Cincopa <a href='http://www.cincopa.com/video-hosting'>Video Hosting for Business</a> solution.<span>Slideshow</span><span>Homepage</span><span>Style Weather</span><span>Have a hard time knowing what to wear? Do you sometimes under/over dress? Then you prayers have been answered!</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 225</span><span>height</span><span> 225</span><span>BURGUNDY!</span><span>Burgundy is December's color. Hot color that's great for the holidays and easily matched with a hot red or dark lipstick.</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 2238</span><span>height</span><span> 1675</span><span>New Upcoming Graphic Designer</span><span>Who is this mysterious graphic designer everyone is raving about? </span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 1200</span><span>height</span><span> 750</span><span>HAPPY HOLIDAYS!</span><span>Hope you all have a Merry Christmas and a Happy New Year!</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 2100</span><span>height</span><span> 1650</span></noscript>
-		
+				c.parentNode.insertBefore(cp, c); })(); </script><noscript>Powered by Cincopa <a href='http://www.cincopa.com/video-hosting'>Video Hosting for Business</a> solution.<span>Slideshow</span><span>Homepage</span><span>New Upcoming Graphic Designer</span><span>Who is this mysterious graphic designer everyone is raving about? </span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 1200</span><span>height</span><span> 750</span><span>BURGUNDY!</span><span>Burgundy is December's color. Hot color that's great for the holidays and easily matched with a hot red or dark lipstick.</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 2238</span><span>height</span><span> 1292</span><span>Style Weather</span><span>Have a hard time knowing what to wear? Do you sometimes under/over dress? Then you prayers have been answered!</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 2238</span><span>height</span><span> 1317</span><span>HAPPY HOLIDAYS!</span><span>Hope you all have a Merry Christmas and a Happy New Year!</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 2247</span><span>height</span><span> 1295</span></noscript>
 
-			<!--<div id="content">
-				<ul data-role="listview" data-filter="true">
-					<center><li data-role="list-divider">Today</li></center>
-					<li><a href="today.html"></li>
-
-					<center><li data-role="list-divider">Tomorrow</li></center>
-					<li><a href="tomorrow.html"></li>
-
-					<center><li data-role="list-divider">Day After Tomorrow</li></center>
-					<li><a href="dayAfterTomorrow.html"></li>
-				</ul>
-			</div>
-			<div data-role="controlgroup" data-type="vertical">
-      			<p>Choose your day:</p>
-      			<a href="Today/today.html" class="ui-btn">Today</a>
-     			 <a href="tomorrow.html" class="ui-btn">Tomorrow 2</a>
-     			 <a href="dayAfterTomorrow.html" class="ui-btn">Day After Tomorrow</a>
-   			 </div>-->
-			
-			</div>	
 
 			<div data-role="footer" data-position="fixed">
   					<div data-role="navbar">
@@ -87,10 +66,10 @@
     				  		<li><a href="#dayAfterTomorrow" class="ui-btn-active" data-icon="cloud">Day After Tomorrow</a></li>
     					</ul>
  				 	</div>
-			</div>
+		</div>
 	</div>
 
-	<div data-role="page" id="Today" data-position="fixed"><!--page1-->
+<div data-role="page" id="Today" data-position="fixed"><!--page1-->
 		<div data-role="panel" id="mypanel">
 				<div>
 					<ul>
@@ -112,7 +91,7 @@
 				<h2><center>Today</center></h2>
 				<center><p>Flip your phone for your hourly temperature.</p></center>
 
-			<id= "icon">
+				<id= "icon">
 				<p id="wrapper"></p>
 				<center><img id="loader" src="images/loader.gif"/></center>  
 				<p id="temp"></p>
@@ -132,12 +111,14 @@
  				 	</div>
 			</div>
 	
-			<div id="landscape" class="hidden">
-				<h1> Style Weather </h1>
-				<div id="hourly">
-			<h1>hourly weather</h1>
+				<div id="landscape" class="hidden">
+					<h1> Style Weather </h1>
+					<div id="hourly">
+						<h1>hourly weather</h1>
+					</div>
+				</div>
 			
-	</div>
+</div>
 
 <div data-role="page"  id="Tomorrow"> <!--page2-->
 			<div data-role="panel" id="mypanel">
@@ -192,9 +173,9 @@
 					<ul>
 						<li><a href="#" class="ui-btn">Option A</a></li>
 						<li><a href="#" class="ui-btn">Option B</a></li>
-						<li><a href="#" class="ui-btn ui-icon-shop ui-btn-icon-left">Shop</a></li>
+						<li><a href="#shop" class="ui-btn ui-icon-shop ui-btn-icon-left">Shop</a></li>
 						<li><a href="#" class="ui-btn ui-icon-share ui-btn-icon-left">Share</a></li>
-						<li><a href="#" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a></li>
+						<li><a href="#info" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a></li>
 					<ul>
 				</div>
 		    </div>
@@ -231,8 +212,87 @@
 			</div>
 </div>			
 			
+<div data-role="page" id="shop" data-position="fixed"><!--menuShop-->
+		<div data-role="panel" id="mypanel">
+				<div>
+					<ul>
+						<li><a href="#" class="ui-btn">Option A</a></li>
+						<li><a href="#" class="ui-btn">Option B</a></li>
+						<li><a href="#shop" class="ui-btn ui-icon-shop ui-btn-icon-left">Shop</a></li>
+						<li><a href="#" class="ui-btn ui-icon-share ui-btn-icon-left">Share</a></li>
+						<li><a href="#info" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a></li>
+					<ul>
+				</div>
+	    </div>
+
+			<div data-role="header">
+				<a href="#mypanel" class="ui-btn ui-btn-left ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Menu</a>
+				<h1>Style Weather</h1>
+		    </div>
 		
-	
-<script src="owl/owl-carousel/owl.carousel.js"></script>
+		<div data-role="content">
+				<h2><center>Shop till you Drop!</center></h2>
+				<center><p>Here are a few of my fave sites to shop from. Some even inspired the outfits you see in your daily weather. Enjoy!</p></center>
+
+				<p><a href="http://www.ae.com/web/index.jsp" class="link">American Eagle</a></p>
+
+				<p><a href="http://www.forever21.com/" class="link">Forever 21</a></p>
+
+				<p><a href="http://www.hollisterco.com/shop/us" class="link">Hollister</a></p>
+
+				<p><a href="https://www.victoriassecret.com/" class="link">Victoria's Secret</a></p>
+		</div>
+
+
+			<div data-role="footer" data-position="fixed">
+  					<div data-role="navbar">
+   				 		<ul>
+
+     				 		<li><a href="#home" class="ui-btn-active" data-icon="home">Home</a></li>
+     				 		<li><a href="#Tomorrow" class="ui-btn-active" data-icon="cloud">Tomorrow</a></li>
+    				  		<li><a href="#dayAfterTomorrow" class="ui-btn-active" data-icon="cloud">Day After Tomorrow</a></li>
+    					</ul>
+ 				 	</div>
+			</div>	
+		
+</div>	
+
+
+<div data-role="page" id="info" data-position="fixed"><!--menuInfo-->
+		<div data-role="panel" id="mypanel">
+				<div>
+					<ul>
+						<li><a href="#" class="ui-btn">Option A</a></li>
+						<li><a href="#" class="ui-btn">Option B</a></li>
+						<li><a href="#shop" class="ui-btn ui-icon-shop ui-btn-icon-left">Shop</a></li>
+						<li><a href="#" class="ui-btn ui-icon-share ui-btn-icon-left">Share</a></li>
+						<li><a href="#info" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a></li>
+					<ul>
+				</div>
+	    </div>
+
+			<div data-role="header">
+				<a href="#mypanel" class="ui-btn ui-btn-left ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Menu</a>
+				<h1>Style Weather</h1>
+		    </div>
+		
+			<div data-role="content">
+				<h2><center>Info</center></h2>
+				<center><p>FBacon ipsum dolor amet flank pork chop tongue, pig shankle venison andouille beef ribs tenderloin bacon. T-bone pork chop pork loin, tail ball tip shank bacon boudin meatball. Spare ribs pancetta swine short ribs leberkas brisket, boudin tenderloin. Beef shankle salami, turkey ham hock bresaola swine ball tip andouille.
+
+				Pork loin frankfurter picanha, rump short loin capicola doner short ribs andouille. Pancetta alcatra kevin cow, picanha beef ribs brisket short ribs boudin pig beef kielbasa. Shankle chuck cupim rump shank cow pork belly tenderloin. Pork biltong sirloin beef ribs, pork loin kielbasa meatloaf. Hamburger boudin ball tip tail, spare ribs corned beef andouille tenderloin frankfurter turducken ground round brisket. Tenderloin filet mignon turkey biltong tongue meatloaf, beef ribs meatball pastrami ribeye short loin swine porchetta. Ham hock prosciutto rump meatball t-bone cow corned beef flank drumstick ribeye venison tongue fatback.</p></center>
+			</div>
+			<div data-role="footer" data-position="fixed">
+  					<div data-role="navbar">
+   				 		<ul>
+
+     				 		<li><a href="#home" class="ui-btn-active" data-icon="home">Home</a></li>
+     				 		<li><a href="#Tomorrow" class="ui-btn-active" data-icon="cloud">Tomorrow</a></li>
+    				  		<li><a href="#dayAfterTomorrow" class="ui-btn-active" data-icon="cloud">Day After Tomorrow</a></li>
+    					</ul>
+ 				 	</div>
+			</div>	
+</div>
+
 </body>
 </html>
