--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<!--<link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">Shortcut Icon Link. Need to create PNG
-	Owl Carousel
+	Owl Carousel-->
 	<link rel="stylesheet" href="owl/owl-carousel/owl.carousel.css">
 	<link rel="stylesheet" href="owl/owl-carousel/owl.theme.css">
-	<script src="owl/assets/js/jquery-1.9.1.min.js"></script>-->
+	<script src="owl/assets/js/jquery-1.9.1.min.js"></script>
 	
 </head>
 
@@ -49,8 +49,8 @@
 		<div data-role="content">
 				<h2><center>Know what to wear, and when!</center></h2>
 			
-			<div id="cp_widget_f997b0a4-508a-4205-a8b5-4d1829712088">...</div><script type="text/javascript">
-				var cpo = []; cpo["_object"] ="cp_widget_f997b0a4-508a-4205-a8b5-4d1829712088"; cpo["_fid"] = "AcKAQLsmM619";
+			<div id="cp_widget_d9135fa2-be7f-4d31-acb7-e08995437e39">...</div><script type="text/javascript">
+				var cpo = []; cpo["_object"] ="cp_widget_d9135fa2-be7f-4d31-acb7-e08995437e39"; cpo["_fid"] = "AcKAQLsmM619";
 				var _cpmp = _cpmp || []; _cpmp.push(cpo);
 				(function() { var cp = document.createElement("script"); cp.type = "text/javascript";
 				cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
@@ -111,7 +111,107 @@
     					</ul>
  				 	</div>
 			</div>
-	
+	<div id="landscape" class="hidden">
+		<div id="owl-example" class="owl-carousel" id="slide">
+			<div id="hour" clas="hourly">
+				<p id="hour1"></p>
+				<p id="temp1"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour2"></p>
+				<p id="temp2"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour3"></p>
+				<p id="temp3"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour4"></p>
+				<p id="temp4"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour5"></p>
+				<p id="temp5"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour6"></p>
+				<p id="temp6"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour7"></p>
+				<p id="temp7"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour8"></p>
+				<p id="temp8"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour9"></p>
+				<p id="temp9"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour10"></p>
+				<p id="temp10"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour11"></p>
+				<p id="temp11"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour12"></p>
+				<p id="temp12"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour13"></p>
+				<p id="temp13"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour14"></p>
+				<p id="temp14"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour15"></p>
+				<p id="temp15"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour16"></p>
+				<p id="temp16"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour17"></p>
+				<p id="temp17"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour18"></p>
+				<p id="temp18"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour19"></p>
+				<p id="temp19"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour20"></p>
+				<p id="temp20"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour21"></p>
+				<p id="temp21"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour22"></p>
+				<p id="temp22"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour23"></p>
+				<p id="temp23"></p>
+			</div>
+			<div id="hour" clas="hourly">
+				<p id="hour24"></p>
+				<p id="temp24"></p>
+			</div>
+
+		</div><!--end of owl example-->
+	</div><!--end of landscape-->
 			
 			
 </div>
