--- a/index.html
+++ b/index.html
@@ -67,9 +67,12 @@
     					</ul>
  					</div>
  			</div>	 	
+		</div>
 	</div>
 </div>
 
+
+<div id="portrait">
 <div data-role="page" id="Today" data-position="fixed"><!--page1-->
 		<div data-role="panel" id="mypanel">
 				<div>
@@ -111,6 +114,7 @@
     					</ul>
  				 	</div>
 			</div>
+</div>
 	<div id="landscape" class="hidden">
 		<div id="owl-example" class="owl-carousel" id="slide">
 			<div id="hour" clas="hourly">
