Commented on all divs

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<li><a href="#info" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a></li>
 					<ul>
 				</div>
-		    </div>
+		    </div><!--End of myPanel-->
 
 			<div data-role="header">
 				<a href="#mypanel" class="ui-btn ui-btn-left ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Menu</a>
@@ -66,14 +66,14 @@
     				  		<li><a href="#dayAfterTomorrow" class="ui-btn-active" data-icon="cloud">Day After Tomorrow</a></li>
     					</ul>
  					</div>
- 			</div>	 	
-		</div>
-	</div>
-</div>
+ 			</div><!--End of Footer-->	 	
+		</div><!--End of content-->
+	</div><!--end of Home page-->
+</div><!--End of portrait for HomePage-->
 
 
 <div id="portrait">
-<div data-role="page" id="Today" data-position="fixed"><!--page1-->
+	<div data-role="page" id="Today" data-position="fixed"><!--page1-->
 		<div data-role="panel" id="mypanel">
 				<div>
 					<ul>
@@ -84,7 +84,7 @@
 						<li><a href="#" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a></li>
 					<ul>
 				</div>
-	    </div>
+	    </div><!--End of myPanel-->
 
 			<div data-role="header">
 				<a href="#mypanel" class="ui-btn ui-btn-left ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Menu</a>
@@ -113,8 +113,10 @@
     				  		<li><a href="#dayAfterTomorrow" class="ui-btn-active" data-icon="cloud">Day After Tomorrow</a></li>
     					</ul>
  				 	</div>
-			</div>
-</div>
+			</div><!--End of Footer-->
+	</div><!--End of Today page-->
+</div><!--End of portrait-->
+
 	<div id="landscape" class="hidden">
 		<div id="owl-example" class="owl-carousel" id="slide">
 			<div id="hour" clas="hourly">
@@ -217,10 +219,8 @@
 		</div><!--end of owl example-->
 	</div><!--end of landscape-->
 			
-			
-</div>
-
-<div data-role="page"  id="Tomorrow"> <!--page2-->
+<div id="portrait">
+	<div data-role="page"  id="Tomorrow"> <!--page2-->
 			<div data-role="panel" id="mypanel">
 				<div>
 					<ul>
@@ -231,7 +231,7 @@
 						<li><a href="#" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a></li>
 					<ul>
 				</div>
-		    </div>
+		    </div><!--End of myPanel-->
 
 			<div data-role="header">
 				<a href="#mypanel" class="ui-btn ui-btn-left ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Menu</a>
@@ -249,7 +249,7 @@
 					<p id="temp2"></p>
        				 <p id="sum2"></p>
 				</div>
-			</div>	
+			</div><!--End of content-->
 
 			<div data-role="footer" data-position="fixed">
   					<div data-role="navbar">
@@ -259,11 +259,13 @@
     				  		<li><a href="#dayAfterTomorrow" class="ui-btn-active" data-icon="cloud">Day After Tomorrow</a></li>
     					</ul>
  				 	</div>
-			</div>
-	
-</div>
+			</div><!--End of footer-->
+	</div><!--End of Tomorrow page-->
+		
+</div><!--End of portrait-->
 
-<div data-role="page"  id="dayAfterTomorrow"><!--page3-->
+<div id="portrait">
+	<div data-role="page"  id="dayAfterTomorrow"><!--page3-->
 			<div data-role="panel" id="mypanel">
 				<div>
 					<ul>
@@ -305,10 +307,13 @@
     				  		
     					</ul>
  				 	</div>
-			</div>
-</div>			
-			
-<div data-role="page" id="shop" data-position="fixed"><!--menuShop-->
+ 			</div><!--End of footer-->
+	</div><!--End of of day after tomorrow page-->
+</div><!--End of portrait-->			
+	
+
+<div id="portrait">		
+	<div data-role="page" id="shop" data-position="fixed"><!--menuShop-->
 		<div data-role="panel" id="mypanel">
 				<div>
 					<ul>
@@ -337,7 +342,7 @@
 				<p><a href="http://www.hollisterco.com/shop/us" class="link">Hollister</a></p>
 
 				<p><a href="https://www.victoriassecret.com/" class="link">Victoria's Secret</a></p>
-		</div>
+		</div><!--End of content-->
 
 
 			<div data-role="footer" data-position="fixed">
@@ -349,12 +354,12 @@
     				  		<li><a href="#dayAfterTomorrow" class="ui-btn-active" data-icon="cloud">Day After Tomorrow</a></li>
     					</ul>
  				 	</div>
-			</div>	
-		
-</div>	
+			</div><!--End of footer-->
+	</div><!--End of shop page-->	
+</div><!--End of portrait-->
 
-
-<div data-role="page" id="info" data-position="fixed"><!--menuInfo-->
+<div id="portrait">
+	<div data-role="page" id="info" data-position="fixed"><!--menuInfo-->
 		<div data-role="panel" id="mypanel">
 				<div>
 					<ul>
@@ -391,8 +396,8 @@
 			</div>
 
 	<script src="owl/owl-carousel/owl.carousel.js"></script>
-
-</div>
+</div><!--End of info page-->
+</div><!--End of portrait-->
 
 </body>
 </html>
